nodejs-api-testing/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nodejs
  labels:
    name: nodejs
    environment: development
